--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -12,8 +12,8 @@
 
   {% for portfolio in list %}
   <div class='portfolio'>
-  <img src="{{portfolio.foto.url}}" alt="фотография">
-  <p>{{portfolio.text}}</p>
+  <img class="foto" src="{{portfolio.foto.url}}" alt="фотография">
+  <p class="text">{{portfolio.text}}</p>
   </div>
   {% endfor %}
 
