--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -7,15 +7,16 @@
   <title>наши работы</title>
 </head>
 <body>
-  <h1>наши работы</h1>
-  <p></p>
-
-  {% for portfolio in list %}
-  <div class='portfolio'>
-  <img class="foto" src="{{portfolio.foto.url}}" alt="фотография">
-  <p class="text">{{portfolio.text}}</p>
-  </div>
-  {% endfor %}
+ 
+    <h1>наши работы</h1>
+  <main><p></p>
+    {% for portfolio in list %}
+    <div class='portfolio'>
+    <img class="foto" src="{{portfolio.foto.url}}" alt="фотография">
+    <p class="text">{{portfolio.text}}</p>
+    </div>
+    {% endfor %}
+  </main>
 
 
 
