обернул в div заголовки на sale.html

--- a/main/templates/main/sale.html
+++ b/main/templates/main/sale.html
@@ -7,7 +7,13 @@
   <title>акции</title>
 </head>
 <body>
-  <h1>Новенькое</h1>
-  <p>в этом разделе мы раскажем о самых выгодных предложениях</p>
+  <div>
+    <div>
+      <h1>Новенькое</h1>
+    </div>
+    <div>
+      <p>в этом разделе мы раскажем о самых выгодных предложениях</p>
+    </div>
+  </div>
 </body>
 </html>
