исправлена цвет заголовка на стр. portfolio

--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -9,7 +9,7 @@
 <body>
  
     <h1>наши работы</h1>
-  <main><p></p>
+  <main>
     {% for portfolio in list %}
     <div class='portfolio'>
     <img class="foto" src="{{portfolio.foto.url}}" alt="фотография">
