--- a/main/static/main/css/portfolio.css
+++ b/main/static/main/css/portfolio.css
@@ -9,6 +9,10 @@ a {
   text-decoration: none;
 }
 
+h1{
+  color: aliceblue;
+}
+
 body{
   padding-top: 50px;
   background-image: url("/static/main/img/pfbg.jpg"); 
