--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -17,6 +17,9 @@
 		<div class="layers__container">
 			<div class="layers__item layer-1" style="background-image: url(/static/main/img/Pimg/layer-1.jpg);"></div>
       <div><img class="logo"src="/static/main/img/logo.png" alt="logotip"></div>
+      <div class="money">
+        {{usa}}
+      </div>
       <div class="layers__item layer-2" style="background-image: url(/static/main/img/Pimg/layer-2.png);"></div>
 			<div class="layers__item layer-3">
 				<div class="hero-content">
