создал класс Sale, отразил его в html, изменил стили в портфолио

--- a/main/templates/main/sale.html
+++ b/main/templates/main/sale.html
@@ -15,5 +15,14 @@
       <p>в этом разделе мы раскажем о самых выгодных предложениях</p>
     </div>
   </div>
+  {% comment %} <main>
+    {% for sale in list %}
+    <div class='sale'>
+    <img class="foto" src="{{sale.foto.url}}" alt="фотография">
+    <p class="text">{{sale.text}}</p>
+    </div>
+    {% endfor %}
+  </main> {% endcomment %}
+
 </body>
 </html>
