--- a/main/static/main/css/lensess.css
+++ b/main/static/main/css/lensess.css
@@ -14,13 +14,13 @@
   display: flex;  flex-direction: column;  justify-content:center; align-items: center;
   color: #32058d;
   padding: 20px;
-  margin-left: 40%;
+  margin-left: 35%;
   background-color: #c1e5eb;
   width: 500px;
   border-radius: 10px;
-  border: rgb(181, 181, 235) 5px solid;
+  border: rgb(181, 181, 235) 1px solid;
 border-radius: 10px;
-  border: rgb(181, 181, 235) 5px solid;
+  border: rgb(181, 181, 235) 1px solid;
   -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
@@ -33,41 +33,41 @@ body{
   
 }
 .block-a{
-  display: flex;  flex-direction: row;  justify-content: space-around; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 30px;
   padding: 50px;
-}
-.block-b{
-  display: flex;  flex-direction: row;  justify-content: space-between;
 }
 
 .H3-block{
   color: #220762;
   background-color: #c1e5eb;
   text-align: center;
+  margin-top: 30px;
   margin-bottom: 10px;
-  width: 400px;
-  
+  width: 800px;
+  padding: 10px 70px 10px 70px;
   overflow: auto;
 	text-overflow: ellipsis;
 	display: -webkit-box;
 	/* -webkit-line-clamp: 2; */
 	-webkit-box-orient: vertical;
 border-radius: 10px;
-  border: rgb(181, 181, 235) 5px solid;
+  border: rgb(181, 181, 235) 1px solid;
 border-radius: 10px;
-  border: rgb(181, 181, 235) 5px solid;
+  border: rgb(181, 181, 235) 1px solid;
   -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
 }
 
 .video-len{
-width: 400px;
+width: 800px;
 border-radius: 10px;
-  border: rgb(181, 181, 235) 5px solid;
+  border: rgb(181, 181, 235) 1px solid;
 border-radius: 10px;
-  border: rgb(181, 181, 235) 5px solid;
+  border: rgb(181, 181, 235) 1px solid;
   -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
