--- a/main/templates/main/sale.html
+++ b/main/templates/main/sale.html
@@ -15,14 +15,14 @@
       <p>в этом разделе мы раскажем о самых выгодных предложениях</p>
     </div>
   </div>
-  {% comment %} <main>
+  <main>
     {% for sale in list %}
     <div class='sale'>
     <img class="foto" src="{{sale.foto.url}}" alt="фотография">
     <p class="text">{{sale.text}}</p>
     </div>
     {% endfor %}
-  </main> {% endcomment %}
+  </main> 
 
 </body>
 </html>
