--- a/main/static/main/css/lensess.css
+++ b/main/static/main/css/lensess.css
@@ -28,7 +28,8 @@ border-radius: 10px;
 }
 body{
   padding-top: 50px;
-  background-image: url("/static/main/img/lnbg.png"); 
+  background-color: rgb(13, 13, 61);
+  /* background-image: url("/static/main/img/lnbg.png");  */
   background-size: cover;
   
 }
