--- a/main/static/main/css/lensess.css
+++ b/main/static/main/css/lensess.css
@@ -8,13 +8,26 @@
   color: #220762;
   text-decoration: none;
 } */
-
-
+body{
+  padding-top: 50px;
+  background-color: rgb(13, 13, 61);
+  /* background-image: url("/static/main/img/lnbg.png");  */
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main{
+  display: flex;  flex-direction: column;  justify-content: column; align-items: center;
+  background-color: rgba(255, 255, 255, .5);
+  width: 1000px;
+  
+}
 .text-l{
-  display: flex;  flex-direction: column;  justify-content:center; align-items: center;
-  color: #32058d;
+  display: flex;  flex-direction: column;  justify-content: column; align-items: center;
+  color: #2806b3;
   padding: 20px;
-  margin-left: 35%;
+  margin-top: 30px;
   background-color: #c1e5eb;
   width: 500px;
   border-radius: 10px;
@@ -24,14 +37,6 @@ border-radius: 10px;
   -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
- 
-}
-body{
-  padding-top: 50px;
-  background-color: rgb(13, 13, 61);
-  /* background-image: url("/static/main/img/lnbg.png");  */
-  background-size: cover;
-  
 }
 .block-a{
   display: flex;
@@ -40,7 +45,6 @@ body{
   margin: 30px;
   padding: 50px;
 }
-
 .H3-block{
   color: #220762;
   background-color: #c1e5eb;
@@ -55,14 +59,13 @@ body{
 	/* -webkit-line-clamp: 2; */
 	-webkit-box-orient: vertical;
 border-radius: 10px;
-  border: rgb(181, 181, 235) 1px solid;
+  border: rgb(228, 228, 234) 1px solid;
 border-radius: 10px;
-  border: rgb(181, 181, 235) 1px solid;
+  border: rgb(229, 229, 232) 1px solid;
   -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
 }
-
 .video-len{
 width: 800px;
 border-radius: 10px;
