--- a/main/static/main/css/review.css
+++ b/main/static/main/css/review.css
@@ -11,13 +11,34 @@ a {
 
 body{
   padding-top: 50px;
-  background-image: url("/static/main/img/rvbg.png"); 
+  /* background-image: url("/static/main/img/rvbg.png");  */
+  background-color: rgb(11, 11, 70);
   background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+img{
+  width: 500px;
+  border-radius: 10px;
+  
+}
+p{
+  font-size: 18px;
+}
+.review{
+  border: rgb(181, 181, 235) 1px solid;
+  margin-top: 20px;
+  border-radius: 10px;
+  background-color: rgb(192, 221, 247);
+  border: rgb(181, 181, 235) 1px solid;
+border-radius: 10px;
+  border: rgb(181, 181, 235) 1px solid;
+  -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+  -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+  box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+}
 textarea{
-  background-color: aqua;
+  background-color: rgb(149, 202, 202);
 }
