--- a/main/static/main/css/lensess.css
+++ b/main/static/main/css/lensess.css
@@ -9,9 +9,13 @@
   text-decoration: none;
 } */
 body{
-  padding-top: 50px;
-  background-color: rgb(13, 13, 61);
-  /* background-image: url("/static/main/img/lnbg.png");  */
+  background-image: url("/static/main/img/lenbg.jpg");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   display: flex;
   flex-direction: column;
@@ -19,7 +23,7 @@ body{
 }
 main{
   display: flex;  flex-direction: column;  justify-content: column; align-items: center;
-  background-color: rgba(255, 255, 255, .5);
+  background-color: rgba(255, 255, 255, .7);
   width: 1000px;
   
 }
