--- a/main/static/main/css/portfolio.css
+++ b/main/static/main/css/portfolio.css
@@ -6,6 +6,12 @@
 body{
   padding-top: 50px;
   background-image: url("/static/main/img/pfbg.jpg"); 
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   display: flex;
   flex-direction: column;
