--- a/main/static/main/css/portfolio.css
+++ b/main/static/main/css/portfolio.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body{
-  padding-top: 50px;
+  /* padding-top: 50px; */
   background-image: url("/static/main/img/pfbg.jpg"); 
   background-repeat: no-repeat;
   background-position: center center;
