редакция текста на стр. организациям

--- a/main/templates/main/organizations.html
+++ b/main/templates/main/organizations.html
@@ -24,7 +24,7 @@
        вашего коллектива на себя.
      </p> 
     <p>
-      Для сотрудничества с нами Вам необходимо согласовать с нами дату и время выезда в вашу организацию.
+      Для сотрудничества, нам c Вами необходимо согласовать дату и время выезда в вашу организацию.
       При необходимости мы осуществляем проверку зрения, подбираем оправу и очковые линзы, 
       обговариваем дату доставки готового заказа.
       Вы как руководитель можете взять на себя оплату части заказа вашего сотрудника, проявив свою заботу
