--- a/login/static/login/css/profile.css
+++ b/login/static/login/css/profile.css
@@ -2,6 +2,16 @@
   width: 200px;
 }
 body{
+  background-color: brown;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+main{
+  background-color: rgba(255, 255, 255, .5);
+  width: 1000px;
+  margin-top: 70px;
+  height: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
