--- a/login/templates/login/profile.html
+++ b/login/templates/login/profile.html
@@ -7,17 +7,19 @@
   <title>Личный кабинет</title>
 </head>
 <body>
-имя пользователя:{{user.username}}
-  {% if user.Profile.foto  %}
-  <img src="{{user.Profile.foto}}" alt="фото пользователя">
-  {% else %}
-  <img class="anonim" src="/static/login/img/anonim.jpg" alt="аватарка">
-  {% endif %}
-
-<h3>имя: {{user.Profile.firstname}}</h3>
-<h3>фамилия: {{user.Profile.laststname}}</h3>
-<h3>дата рождения: {{user.Profile.date}}</h3>
-
-<a href="/">Вернуться на главную страницу</a>
+  <main>
+    <h3>Имя пользователя:  {{user.username}}</h3>
+      {% if user.Profile.foto  %}
+      <img src="{{user.Profile.foto}}" alt="фото пользователя">
+      {% else %}
+      <img class="anonim" src="/static/login/img/anonim.jpg" alt="аватарка">
+      {% endif %}
+    
+    <h3>имя: {{user.Profile.firstname}}</h3>
+    <h3>фамилия: {{user.Profile.laststname}}</h3>
+    <h3>дата рождения: {{user.Profile.date}}</h3>
+    
+    <a href="/">Вернуться на главную страницу</a>
+  </main>
 </body>
 </html>
