редактирование страницы пользователя 2

--- a/login/templates/login/profile.html
+++ b/login/templates/login/profile.html
@@ -7,6 +7,18 @@
   <title>Личный кабинет</title>
 </head>
 <body>
+  <header> 
+    <button class="tuch"><a id="about" href='/about'>о нас</a></button>
+    <button class="tuch"><a id="about" href='/lensess'>линзы</a></button>
+    <button class="tuch"><a id="about" href='/sale'>акции</a></button>
+    <button class="tuch"><a id="about" href='/portfolio'>наши работы</a></button>
+    <button class="tuch"><a id="about" href='/review'>отзывы</a></button>
+    <button class="tuch"><a id="about" href='/organizations'>организациям</a></button>
+    
+      <H2>переход на страницы сайта</H2> 
+    
+  </header>
+
   <main>
     <h3>Имя пользователя:  {{user.username}}</h3>
       {% if user.Profile.foto  %}
