--- a/main/static/main/css/index.css
+++ b/main/static/main/css/index.css
@@ -70,6 +70,9 @@ a:hover{
 }
 .money{
   display: flex; justify-content: end;
+  position:fixed;
+  top: 0;
+  right: 0;
   margin-right: 100px;
-  margin-top: 20px;
+  margin-top: 50px;
 }
