--- a/login/templates/login/profile.html
+++ b/login/templates/login/profile.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/login/css/profile.css">
+  {% comment %} <link rel="stylesheet" href="/static/main/css/Pmain.css"> {% endcomment %}
   <title>Личный кабинет</title>
 </head>
 <body>
