--- a/main/static/main/css/frame.css
+++ b/main/static/main/css/frame.css
@@ -28,7 +28,7 @@ border-radius: 10px;
 }
 body{
   padding-top: 50px;
-  /* background-image: url("/static/main/img/frbg.jpg");  */
+  background-image: url("/static/main/img/lenbg.jpg"); 
   background-size: cover;
 
 }
