--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -11,6 +11,8 @@
    
   <link rel="stylesheet" href="/static/main/css/Pmain.css"> <!--paralax-->
   <link rel="stylesheet" href="/static/main/css/index.css">
+  <link rel="stylesheet" href="/static/main/css/fonts.css">
+
   </head>
 <body>
   <section class="layers">
