--- a/main/static/main/css/sale.css
+++ b/main/static/main/css/sale.css
@@ -9,7 +9,7 @@ a{
 }
 body{
   padding-top: 50px;
-  background-image: url("/static/main/img/nwbg.png"); 
+  background-image: url("/static/main/img/salebg.jpg"); 
   background-size: cover;
   display: flex;
   flex-direction: column;
