редактирование страницы акции смайлик

--- a/main/templates/main/sale.html
+++ b/main/templates/main/sale.html
@@ -9,10 +9,10 @@
 <body>
   <div class="text-l">
     <div>
-      <h1>Новенькое</h1>
+      <h1>Новенькое &#128521</h1> 
     </div>
     <div>
-      <p>в этом разделе мы раскажем о самых выгодных предложениях</p>
+      <h3>в этом разделе мы раскажем о самых выгодных предложениях</h3>
     </div>
   </div>
   <main>
