--- a/main/static/main/css/portfolio.css
+++ b/main/static/main/css/portfolio.css
@@ -17,7 +17,7 @@ body{
   flex-direction: column;
   align-items: center;
 }
-main{
+.over{
   background-color: rgba(255, 255, 255, .5);
   width: 1000px;
   margin-top: 30px;
