--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="/static/main/css/Pmain.css"> <!--paralax-->
   <link rel="stylesheet" href="/static/main/css/index.css">
   <link rel="stylesheet" href="/static/main/css/fonts.css">
+  <link rel="stylesheet" href="/static/main/css/media.css">
 
   </head>
 <body>
