--- a/main/templates/main/portfolio.html
+++ b/main/templates/main/portfolio.html
@@ -4,12 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/main/css/portfolio.css">
+  <link rel="stylesheet" href="/static/main/css/media.css">
   <title>наши работы</title>
 </head>
 <body>
  
     <h1>наши работы</h1>
-  <main>
+  <main class="over">
     {% for portfolio in list %}
     <div class='portfolio'>
     <img class="foto" src="{{portfolio.foto.url}}" alt="фотография">
