--- a/main/static/main/css/sale.css
+++ b/main/static/main/css/sale.css
@@ -10,6 +10,12 @@ a{
 body{
   padding-top: 50px;
   background-image: url("/static/main/img/salebg.jpg"); 
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   display: flex;
   flex-direction: column;
