--- a/main/static/main/css/review.css
+++ b/main/static/main/css/review.css
@@ -3,26 +3,54 @@
   margin: 0;
   box-sizing: border-box;
 }
-
 a {
   color: black;
   text-decoration: none;
 }
 
+ .title{                       /*  теперь это заголовок на странице */
+  color: white;
+  text-transform: none;
+	font-family: SemiBoldItalic;
+	letter-spacing: normal;
+	font-size: 20px;
+	line-height: 3;
+}
+.register{                           /*  кнопка регистрации */
+  background-color: rgb(83, 158, 224);
+  border: solid;
+  border-color: rgba(214, 57, 4, 0.603);
+  border-radius: 10px;
+  width: 150px;
+  padding: 5px;
+  cursor: pointer;
+}
+.open{                                   /*  кнопка вход */
+  margin-top: 20px;
+  background-color: rgb(83, 158, 224);
+  border: solid;
+  border-color: rgba(214, 57, 4, 0.603);
+  border-radius: 10px;
+  width: 150px;
+  padding: 5px;
+  cursor: pointer;
+}
 body{
   padding-top: 50px;
-  /* background-image: url("/static/main/img/rvbg.png");  */
-  background-color: rgb(11, 11, 70);
+  background-image: url("/static/main/img/rvbg.jpg"); 
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
 img{
-  /* width: 500px; */
   border-radius: 10px;
-  
 }
 p{
   font-size: 18px;
@@ -39,6 +67,48 @@ border-radius: 10px;
   -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
   box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
 }
-textarea{
-  background-color: rgb(149, 202, 202);
+
+.nike{                        /*  ник пользователя под отзывом */
+  margin-left: 40px;
+}
+.titlefot{                        /*  текст отзыва под фотографией */
+  margin-left: 20px;
+}
+.delete{                          /*  кнопка удалить (у зарег. пользователя) под отзывом */
+  margin-top: 5px;
+  background-color: rgb(83, 158, 224);
+  border: rgb(181, 181, 235) 1px solid; 
+  border-color: rgba(11, 55, 144, 0.603);
+  border-radius: 10px;
+  
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
+  width: 600px;
+  padding: 5px;
+  cursor: pointer;
+}
+.formcontent{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
+
+}
+.save{                       /*  кнопка сохранить (у зарег. пользователя) под формой загрузки файла отзыва */
+  margin-top: 5px;
+  background-color: rgb(83, 158, 224);
+  border: solid;
+  border: rgb(181, 181, 235) 1px solid;
+  border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: medium;
+  width: 596px;
+  padding: 5px;
+  cursor: pointer;
+}
+.forma{
+  background-color: rgb(237, 16, 16);
+  background-color: rgb(141, 187, 227);
+  border: rgb(181, 181, 235) 1px solid; 
+  
+  border-radius: 10px;
+  width: 600px;
 }
