--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -12,7 +12,7 @@
   <div><img class="logo" src="/static/main/img/logo.png" alt="logotip"></div>
   <div class="uptext">
     <h1>Познакомимся?</h1>
-    <p>новое качество нашей оптики - это  мобильность</p>
+    <p>новое качество нашей оптики - это  <span class="wiet">мобильность</span></p>
   </div>
   <div class="ram-block"><p>Мы - оптика, да ещё и мобильная, где заказать себе очки проще простого. Нам 10 лет, и за это время мы стали своими для многих людей.
     Если вы читаете этот текст, то теперь тоже можете войти в круг наших друзей. Что же это значит? А это значит, что теперь оптика и врач могут приехать к вам.
