--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -9,11 +9,21 @@
 <body>
   <div class="text-l">
     <div>
-      <h1>наши оправы</h1>
+      <h1>оправы бывают разными &#128064;</h1>
     </div>
     <div>
-      <p>только качественная продукция</p>
+      <p>всегда в наличии более сотни оправ</p>
     </div>
   </div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+<div></div>
+
+
+
+
 </body>
 </html>
