--- a/login/static/login/css/profile.css
+++ b/login/static/login/css/profile.css
@@ -6,14 +6,14 @@ a{
   width: 200px;
 }
 body{
-  /* background-color: brown; */
-  background: url(https://html5book.ru/wp-content/uploads/2015/10/background54.png);
+  background-image: url("/static/main/img/bgprof.jpg"); 
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 header{
-  width: 1500px;
+  width: 1180px;
   height: 90px;
   background-color: aliceblue;
   border: solid;
@@ -23,7 +23,7 @@ header{
     display: inline-block;
     margin: 10px 20px;
     padding: 15px 30px;
-    overflow: hidden;
+    /* overflow: hidden; */
     border: 2px solid;
     border-bottom-width: 4px;
     font-family: 'SemiBoldItalic', sans-serif;
