--- a/login/static/login/css/profile.css
+++ b/login/static/login/css/profile.css
@@ -18,12 +18,11 @@ header{
   background-color: aliceblue;
   border: solid;
 }
-.tuch{
+ .tuch{                      /* кнопки перехода на страницы */
       text-decoration: none;
     display: inline-block;
     margin: 10px 20px;
     padding: 15px 30px;
-    /* overflow: hidden; */
     border: 2px solid;
     border-bottom-width: 4px;
     font-family: 'SemiBoldItalic', sans-serif;
