--- a/login/templates/login/profile.html
+++ b/login/templates/login/profile.html
@@ -32,7 +32,7 @@
     <h3>фамилия: {{user.Profile.laststname}}</h3>
     <h3>дата рождения: {{user.Profile.date}}</h3>
     
-    <a href="/">Вернуться на главную страницу</a>
+    <button class="exit"><a href="/">Вернуться на главную страницу</a></button>
   </main>
 </body>
 </html>
