--- a/login/templates/login/profile.html
+++ b/login/templates/login/profile.html
@@ -16,7 +16,7 @@
     <button class="tuch"><a id="about" href='/review'>отзывы</a></button>
     <button class="tuch"><a id="about" href='/organizations'>организациям</a></button>
     
-      <H2>переход на страницы сайта</H2> 
+      <H2 class="title">переход на страницы сайта</H2> 
     
   </header>
 
