добавил блоки на стр. оправы

--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -15,12 +15,12 @@
       <p>всегда в наличии более сотни оправ</p>
     </div>
   </div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
-<div></div>
+<div>оправы ободковые</div>
+<div>оправы на леске</div>
+<div>комбинированные</div>
+<div>на втулках(силуэт)</div>
+<div>лекторы</div>
+<div>металлические, пластиковые, титановые</div>
 
 
 
