добавил class  на стр. оправы

--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -15,13 +15,13 @@
       <p>всегда в наличии более сотни оправ</p>
     </div>
   </div>
-<div>оправы ободковые</div>
-<div>оправы на леске</div>
-<div>комбинированные</div>
-<div>на втулках(силуэт)</div>
-<div>лекторы</div>
-<div>металлические, пластиковые, титановые</div>
-<div> и другие</div>
+<div class="frams">оправы ободковые</div>
+<div class="frams">оправы на леске</div>
+<div class="frams">комбинированные</div>
+<div class="frams">на втулках(силуэт)</div>
+<div class="frams">лекторы</div>
+<div class="frams">металлические, пластиковые, титановые</div>
+<div class="frams"> и другие</div>
 
 
 
