добавил class block-frame и расположил элементы с помощью флекс  на стр. оправы

--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -15,13 +15,15 @@
       <p>всегда в наличии более сотни оправ</p>
     </div>
   </div>
-<div class="frams">оправы ободковые</div>
-<div class="frams">оправы на леске</div>
-<div class="frams">комбинированные</div>
-<div class="frams">на втулках(силуэт)</div>
-<div class="frams">лекторы</div>
-<div class="frams">металлические, пластиковые, титановые</div>
-<div class="frams"> и другие</div>
+<div class="block-frams">
+  <div class="frams">оправы ободковые</div>
+  <div class="frams">оправы на леске</div>
+  <div class="frams">комбинированные</div>
+  <div class="frams">на втулках(силуэт)</div>
+  <div class="frams">лекторы</div>
+  <div class="frams">металлические, пластиковые, титановые</div>
+  <div class="frams"> и другие</div>
+</div>
 
 
 
