--- a/main/static/main/css/frame.css
+++ b/main/static/main/css/frame.css
@@ -30,5 +30,22 @@ body{
   padding-top: 50px;
   background-image: url("/static/main/img/bgfr.jpg"); 
   background-size: cover;
+ 
+
+}
+.block-frams{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.frams{
+  margin-left: 30px;
+  margin-bottom: 30px;
+  width: 200px;
+  height: 200px;
+  border: rgb(2, 2, 16) 5px solid;
+  display: flex;
+  justify-content: space-between;
 
 }
