--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -7,23 +7,32 @@
   <title>оправы</title>
 </head>
 <body>
-  <div class="text-l">
-    <div>
-      <h1>оправы бывают разными &#128064;</h1>
+  <main>
+    <div class="text-l">
+      <div>
+        <h1>оправы бывают разными &#128064;</h1>
+      </div>
+      <div>
+        <p>всегда в наличии более сотни оправ</p>
+      </div>
     </div>
-    <div>
-      <p>всегда в наличии более сотни оправ</p>
+    <div class="block-frams">
+        <div>
+          <h3 class="frame">Оправы ободковые <br><details>описание.......................
+            ......................
+            ..........................
+          </details></h3>
+          
+          <div class="obodok"> оправы ободковые </div>
+        </div>
+        <div> оправы полуободковые (на леске)</div>
+        <div> комбинированные</div>
+        <div> безободковые (на втулках)</div>
+        <div> лекторы</div>
+        <div> титановые</div>
+        {% comment %} <div class="frams"> и другие</div> {% endcomment %}
     </div>
-  </div>
-<div class="block-frams">
-  <div class="frams">оправы ободковые</div>
-  <div class="frams">оправы на леске</div>
-  <div class="frams">комбинированные</div>
-  <div class="frams">на втулках(силуэт)</div>
-  <div class="frams">лекторы</div>
-  <div class="frams">металлические, пластиковые, титановые</div>
-  <div class="frams"> и другие</div>
-</div>
+  </main>
 
 
 
