--- a/main/static/main/css/lensess.css
+++ b/main/static/main/css/lensess.css
@@ -11,7 +11,7 @@
 body{
   background-image: url("/static/main/img/lenbg.jpg");
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center;
   background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
