добавил текст  на стр. оправы

--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -19,8 +19,8 @@
     <div class="block-frams">
         <div>
           <h3 class="frame">Оправы ободковые <br><details>описание.......................
-            ......................
-            ..........................
+            ..вапролд..........пролодоррлодлорпролоитьтитть..........
+            .прол прол рол ргш рол рол .........................
           </details></h3>
           
           <div class="obodok"> оправы ободковые </div>
