добавил текст  и стили  на стр. оправы

--- a/main/templates/main/frame.html
+++ b/main/templates/main/frame.html
@@ -16,18 +16,50 @@
         <p>всегда в наличии более сотни оправ</p>
       </div>
     </div>
-    <div class="block-frams">
+    <div class="block-f">
         <div>
-          <h3 class="frame">Оправы ободковые <br><details>описание.......................
-            ..вапролд..........пролодоррлодлорпролоитьтитть..........
-            .прол прол рол ргш рол рол .........................
+          <h3 class="H3-frame">Оправы ободковые <br><details>У ободковых, или полноободковых, оправ световые 
+            проемы полностью ограничены ободком. Эти оправы надежно фиксируют линзы даже большой толщины и 
+            веса и разнообразны по форме, цветам и материалам. Они считаются классикой очковой оптики и, 
+            согласно статистике, являются самым частым выбором покупателей.
+            Первое изображение ободковой оправы относится к 1352 году – и ее можно увидеть на фреске церкви 
+            Сан-Николо в Тревизо (Италия), на которой кардинал Уго де Прованс (Hugo de Provence) что-то пишет 
+            в очках. Первоначально оправы делались из дерева или натурального рога для защиты краев линз от 
+            повреждений. Находка в женском монастыре Винхаузен, неподалеку от немецкого города Целле, 
+            в 1953 году положила конец спору, из какого же именно материала были изготовлены первые 
+            полноободковые оправы: здесь было обнаружено несколько уцелевших очков XIV и XV веков с оправами 
+            из древесины липы и самшитового дерева.
           </details></h3>
-          
-          <div class="obodok"> оправы ободковые </div>
+          <img class="photo" src="/static/main/img/img-frame/obodok.jpg" alt="ободковая оправа">
         </div>
-        <div> оправы полуободковые (на леске)</div>
+       
+          <div>
+            <h3 class="H3-frame">Оправы полуободковые <br><details>В таких конструкциях ободом ограничена лишь 
+              верхняя часть световых проемов (и значительно реже – нижняя). Помимо «полуободка», для крепления 
+              линз используется нейлоновая леска. К преимуществам оправ полуободковой конструкции можно отнести
+               более легкий вес и улучшенный периферический обзор. Возможность комбинировать различные материалы
+                открывает дизайнерам широкий простор для творческих экспериментов, поэтому полуободковые модели
+                 оправ выглядят очень эффектно и пользуются большой популярностью у поклонников стильных и ярких
+                  очков. К незначительному ограничению использования этой конструкции можно отнести тот факт, 
+                  что для нее подходят только линзы из полимерных материалов.</details></h3>
+            <img class="photo" src="/static/main/img/img-frame/pol-obodoc.jpg" alt="ободковая оправа">
+          </div>
+          <div>
+            <h3 class="H3-frame">Оправы безбодковые <br><details>Такие модели не имеют рамки, а линзы в них 
+              удерживаются за счет винтовых креплений. Традиционно в этом типе конструкции линзы имеют отверстия
+              в назальной (носоупоры) и темпоральной (заушники) частях: винт вставляется с внешней стороны линзы
+              и закрепляется с внутренней. Также есть конструкции, в которых винт вставляется с внутренней стороны,
+              а его фиксация снаружи осуществляется при помощи декоративных крепежных элементов. Оправы безободковой 
+              конструкции являются самыми легкими, обеспечивают максимальный обзор; они незаметны на лице и сочетаются
+              с любым стилем одежды. Однако их конструкция имеет ряд технических ограничений, это значит, что не 
+              каждый рецепт может быть выполнен в такой оправе.
+              Каждая из представленных конструкций имеет свои преимущества и особенности, поэтому при подборе очков 
+              важно отталкиваться от ее технических возможностей, эстетических предпочтений клиента и надежности бренда.</details></h3>
+            <img class="photo" src="/static/main/img/img-frame/bez-obodoc.jpg" alt="ободковая оправа">
+          </div>
+
+        
         <div> комбинированные</div>
-        <div> безободковые (на втулках)</div>
         <div> лекторы</div>
         <div> титановые</div>
         
