--- a/main/static/main/css/frame.css
+++ b/main/static/main/css/frame.css
@@ -47,92 +47,45 @@ main{
   width: 1000px;
   
 }
-.block-frame{
+.block-f{
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 30px;
   padding: 50px;
 }
+.H3-frame{
+  color: #220762;
+  background-color: #6c97cf;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  width: 800px;
+  padding: 10px 70px 10px 70px;
+  overflow: auto;
+	text-overflow: ellipsis;
+	display: -webkit-box;
+	/* -webkit-line-clamp: 2; */
+	-webkit-box-orient: vertical;
+border-radius: 10px;
+  border: rgb(228, 228, 234) 1px solid;
+border-radius: 10px;
+  border: rgb(229, 229, 232) 1px solid;
+  -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+  -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+  box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+}
+.photo{
+  width: 800px;
+border-radius: 10px;
+  border: rgb(181, 181, 235) 1px solid;
+border-radius: 10px;
+  border: rgb(181, 181, 235) 1px solid;
+  -webkit-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+  -moz-box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+  box-shadow: 26px 11px 5px -6px rgba(34, 60, 80, 0.6);
+}
 
 
-
-/* 
-.frams{
-  margin-left: 30px;
-  margin-bottom: 30px;
-  width: 200px;
-  height: 200px;
-  border: rgb(2, 2, 16) 5px solid;
-  display: flex;
-  justify-content: space-between;
-  
-}
-.obodok{
-  background-image: url("/static/main/img/img-frame/obodok.jpg"); 
-  background-size: cover;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  width: 200px;
-  height: 200px;
-  border: rgb(2, 2, 16) 5px solid;
-  display: flex;
-  justify-content: space-between;
-}
-.pol-obodoc{
-  background-image: url("/static/main/img/img-frame/pol-obodoc.jpg"); 
-  background-size: cover;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  width: 200px;
-  height: 200px;
-  border: rgb(2, 2, 16) 5px solid;
-  display: flex;
-  justify-content: space-between;
-}
-.kombi{
-  background-image: url("/static/main/img/img-frame/kombi.jpg"); 
-  background-size: cover;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  width: 200px;
-  height: 200px;
-  border: rgb(2, 2, 16) 5px solid;
-  display: flex;
-  justify-content: space-between;
-}
-.bez-obodoc{
-  background-image: url("/static/main/img/img-frame/bez-obodoc.jpg"); 
-  background-size: cover;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  width: 200px;
-  height: 200px;
-  border: rgb(2, 2, 16) 5px solid;
-  display: flex;
-  justify-content: space-between;
-}
-.lektor{
-  background-image: url("/static/main/img/img-frame/lektor.jpg"); 
-  background-size: cover;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  width: 200px;
-  height: 200px;
-  border: rgb(2, 2, 16) 5px solid;
-  display: flex;
-  justify-content: space-between;
-}
-.titan{
-  background-image: url("/static/main/img/img-frame/titan.jpg"); 
-  background-size: cover;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  width: 200px;
-  height: 200px;
-  border: rgb(2, 2, 16) 5px solid;
-  display: flex;
-  justify-content: space-between;
-} */
 
 
