редактирование стр.пользователя

--- a/login/templates/login/profile.html
+++ b/login/templates/login/profile.html
@@ -10,6 +10,7 @@
 <body>
   <header> 
     <button class="tuch"><a id="about" href='/about'>о нас</a></button>
+    <button class="tuch"><a id="about" href='/frame'>оправы</a></button>
     <button class="tuch"><a id="about" href='/lensess'>линзы</a></button>
     <button class="tuch"><a id="about" href='/sale'>акции</a></button>
     <button class="tuch"><a id="about" href='/portfolio'>наши работы</a></button>
