--- a/main/templates/main/lensess.html
+++ b/main/templates/main/lensess.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/static/main/css/lensess.css">
+  <link rel="stylesheet" href="/static/main/css/media.css">
   <title>линзы</title>
 </head>
   <body>
-    <main>
+    <main class="over-l">
       <div class="text-l">
         <div>
           <h1>линзы нашей оптики</h1>
@@ -116,9 +117,6 @@
           </div>
       </div>
     </main>
-
-
-
 
   </body>
 </html>
